--- a/assets/css/formstyle.css
+++ b/assets/css/formstyle.css
@@ -1,11 +1,17 @@
+.main__content {
+	padding: 20px;
+  min-height: 100%;
+  margin: 0 auto -50px;
+}
+
 .chatbox {
 	background-color: #379683;
 	box-shadow: 0 4px #202020;
 	width: 700px;
 	min-width: 390px;
-	height: 630px;
-  padding-top: 22px;
-	margin: 80px auto 30px;
+	height: 660px;
+  padding-top: 20px;
+	margin: 100px auto 50px;
   border-radius: 5px;
 }
 
@@ -14,7 +20,7 @@
 	padding: 5px;
 	margin-left: 30px;
 	width: 92%;
-	height: 520px;
+	height: 550px;
 	overflow-x: hidden;
 	overflow-y: scroll;
   border-radius: 3px;
@@ -89,6 +95,6 @@
 }
 
 .chat-form button:hover {
-	background-color: #3b8beb;
+	background-color: #2982bc;
 	color: #fff;
 }
