--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,13 @@
 * {
-	font-family: "Helvetica", "Tahoma", "Arial";
-	box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html, body {
+	height: 100%;
+  margin: 0;
 }
 
 body {
 	background-color: #03365b;
+	font-family: "Verdana", "Helvetica", "Tahoma", "Arial";
 }
