Some more updates at the footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,5 +9,5 @@ html, body {
 
 body {
 	background-color: #03365b;
-	font-family: "Verdana", "Helvetica", "Tahoma", "Arial";
+	font-family: "Arial", "Verdana", "Tahoma";
 }
