--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,6 +1,47 @@
 .footer {
-  background: #212020;
-  color: white;
+  background: #191818;
+  color: #D0D0D0;
   line-height: 50px;
-  text-align: center;
+  padding-left: 40px;
+  font-size: 14px;
+}
+
+.footer__logo {
+  padding-top: 4px;
+  float: left;
+  margin-right: 30px;
+  margin-left: 20px;
+}
+
+.details {
+  text-align: right;
+  float: right;
+  padding-right: 25px;
+}
+
+.miniimg {
+  height: 16px;
+  width: 16px;
+}
+
+.footer__links {
+  text-decoration: none;
+  color: #F0F0F0;
+  padding-left: 5px;
+}
+
+.footer__links:hover {
+  color: #BEBEBE;
+}
+
+.footer__nav {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__nav__item {
+  float: left;
+  padding-left: 30px;
+  padding-right: 10px;
 }
