--- a/assets/css/formstyle.css
+++ b/assets/css/formstyle.css
@@ -10,8 +10,8 @@
 	width: 700px;
 	min-width: 390px;
 	height: 660px;
-  padding-top: 20px;
-	margin: 110px auto 50px;
+  padding-top: 23px;
+	margin: 110px auto;
   border-radius: 5px;
 }
 
