--- a/assets/css/formstyle.css
+++ b/assets/css/formstyle.css
@@ -82,7 +82,7 @@
 
 .chat-form button {
 	background-color: #2874A6;
-	color: #fff;
+	color: #f5f5f5;
   height: 45px;
   padding: 0 15px 0 15px;
 	font-size: 25px;
@@ -96,5 +96,4 @@
 
 .chat-form button:hover {
 	background-color: #2982bc;
-	color: #fff;
 }
