--- a/assets/css/loginstyle.css
+++ b/assets/css/loginstyle.css
@@ -28,6 +28,7 @@
 
 .login__content h1 {
   margin-top: 14px;
+  margin-bottom: 7px;
   color: #909090;
   font-size: 40px;
   text-align: center;
@@ -127,4 +128,5 @@
   text-align: center;
   color: #f0f0f0;
   font-size: 18px;
+  padding-bottom: 10px;
 }
