--- a/assets/css/aboutstyle.css
+++ b/assets/css/aboutstyle.css
@@ -5,32 +5,46 @@
 }
 
 .about__border {
-  background-color: #17202A;
+  background-color: #379683;
 	box-shadow: 0 4px black;
   width: 800px;
   min-width: 390px;
-  height: 460px;
+  height: 480px;
   padding-top: 23px;
-  margin: 200px auto;
+  margin: 140px auto;
   border-radius: 10px;
 }
 
 .about__mainwindow {
-  background-color: #212F3C;
-  color: #D35400;
+  background-color: #edf5e1;
+  color: black;
   width: 750px;
   min-width: 390px;
   padding-top: 1px;
-  height: 415px;
+  height: 435px;
   margin: 0 auto;
   border-radius: 10px;
   text-align: center;
-  text-shadow: 0 2px black;
+}
+
+.about__mainwindow h1 {
+  display: inline-block;
+  background-color: #5cdb95;
+  margin: 10px 0 0 0;
+  padding: 4px;
+  border-radius: 10px;
 }
 
 .about__text {
   font-size: 22px;
   font-weight: bold;
   text-align: left;
-  padding-left: 50px;
+  padding-left: 100px;
+}
+
+.about__text span {
+  padding: 4px;
+  background-color: #3b8beb;
+  color: #f5f5f5;
+  border-radius: 10px;
 }
