--- a/assets/css/aboutstyle.css
+++ b/assets/css/aboutstyle.css
@@ -27,7 +27,7 @@
   text-align: center;
 }
 
-.about__mainwindow h1 {
+.about__mainwindow h1, h2 {
   display: inline-block;
   background-color: #5cdb95;
   margin: 10px 0 0 0;
@@ -36,7 +36,7 @@
 }
 
 .about__text {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: bold;
   text-align: left;
   padding-left: 100px;
