--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  height: 50px;
 }
 
 .header__logo {
@@ -18,7 +19,7 @@
   margin: 0;
   padding: 0;
   font-size: 18px;
-  padding-right: 40px;
+  padding-right: 20px;
 }
 
 .nav__item {
@@ -29,7 +30,7 @@
   color: #fff;
   display: block;
   text-decoration: none;
-  padding: 15px;
+  padding: 14px;
   text-align: center;
 }
 
@@ -44,4 +45,58 @@
 
 .active {
   background-color: #D35400;
+}
+
+@media screen and (max-width: 600px) {
+  .nav__wrapper {
+    font-size: 10px;
+    padding-right: 10px;
+  }
+  .nav__item .nav__link {
+    padding: 8px;
+  }
+  .header {
+    height: 28px;
+  }
+  .header__logo {
+    height: 100%;
+    margin-left: auto;
+    margin-right: 10px;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .nav__wrapper {
+    font-size: 7px;
+    padding-right: 7px;
+  }
+  .nav__item .nav__link {
+    padding: 6px;
+  }
+  .header {
+    height: 20px;
+  }
+  .header__logo {
+    height: 100%;
+    margin-left: auto;
+    margin-right: 5px;
+  }
+}
+
+@media screen and (max-width: 200px) {
+  .nav__wrapper {
+    font-size: 5px;
+    padding-right: 5px;
+  }
+  .nav__item .nav__link {
+    padding: 3px;
+  }
+  .header {
+    height: 12px;
+  }
+  .header__logo {
+    height: 100%;
+    margin-left: auto;
+    margin-right: 3px;
+  }
 }
