--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
   background: #191818;
   color: #464242;
-  line-height: 50px;
+  height: 50px;
   padding-left: 10px;
   font-size: 14px;
 }
@@ -13,6 +13,11 @@
   margin-left: 20px;
 }
 
+.credits {
+  display: inline-block;
+  margin-top: 20px;
+}
+
 .details {
   text-align: right;
   float: right;
@@ -20,7 +25,7 @@
 }
 
 .miniimg {
-  vertical-align: middle;
+  margin-top: 13px;
 }
 
 .footer__links {
@@ -40,6 +45,9 @@
 }
 
 @media screen and (max-width: 600px) {
+  .footer {
+    line-height: 40px;
+  }
   .footer__logo {
     height: 100%;
   }
