--- a/assets/css/aboutstyle.css
+++ b/assets/css/aboutstyle.css
@@ -1,14 +1,12 @@
 .about__main {
-  padding: 20px;
-  min-height: 100%;
-  margin: 0 auto -50px;
+  padding: 1px;
+  margin: 0;
 }
 
 .about__border {
   background-color: #379683;
 	box-shadow: 0 4px black;
   width: 800px;
-  min-width: 390px;
   height: 480px;
   padding-top: 23px;
   margin: 140px auto;
@@ -19,7 +17,6 @@
   background-color: #edf5e1;
   color: black;
   width: 750px;
-  min-width: 390px;
   padding-top: 1px;
   height: 435px;
   margin: 0 auto;
