--- a/assets/css/loginstyle.css
+++ b/assets/css/loginstyle.css
@@ -197,5 +197,9 @@
   .login__window {
     margin-top: 60px;
     margin-bottom: 1px;
+    height: 350px;
+  }
+  .login__content h1 {
+    font-size: 30px;
   }
 }
