--- a/assets/css/aboutstyle.css
+++ b/assets/css/aboutstyle.css
@@ -11,6 +11,7 @@
   padding-top: 1px;
   height: 435px;
   margin: 140px auto;
+  margin-bottom: 1px;
   border-radius: 10px;
   padding-top: 10px;
   text-align: center;
@@ -87,5 +88,21 @@
   .about__text {
     padding-left: 20px;
     font-size: 9px;
+  }
+}
+
+@media screen and (max-height: 768px) {
+  .about__mainwindow {
+    height: 350px;
+    margin-bottom: 1px;
+    margin-top: 97px;
+  }
+}
+
+@media screen and (max-height: 600px) {
+  .about__mainwindow {
+    height: 350px;
+    margin-bottom: 1px;
+    margin-top: 57px;
   }
 }
