--- a/assets/css/loginstyle.css
+++ b/assets/css/loginstyle.css
@@ -26,19 +26,19 @@
 
 .login__content h1 {
   margin-top: 18px;
-  margin-bottom: 7px;
+  margin-bottom: 13px;
   color: #909090;
   font-size: 40px;
   text-align: center;
   text-shadow: 0 5px #202020;
 }
 
-.login__username, .login__password, .login__checkbox {
+.login__username, .login__password{
   margin-bottom: 12px;
 }
 
 
-.login__username label , .login__password label, .login__checkbox{
+.login__username label , .login__password label{
   padding-left: 60px;
   color: #F52430;
   font-weight: bold;
@@ -63,34 +63,6 @@
 	border-radius: 3px;
   font-size: 16px;
   font-weight: bold;
-}
-
-.login__checkbox {
-  padding-top: 5px;
-}
-
-.login__checkbox__label input[type='checkbox']{
-	position: relative;
-	cursor: pointer;
-}
-
-.login__checkbox__label input[type='checkbox']:after{
-	content: "";
-	text-align: center;
-	position: absolute;
-	cursor: pointer;
-	height: 15px;
-	width: 15px;
-	left: 0;
-	top: 0;
-	font-size: 10px;
-	background-color: #383838;
-}
-
-.login__checkbox__label input[type='checkbox']:checked:after {
-	background-color: #383838;
-	content: '\2714';
-	color: #909090;
 }
 
 .login__button {
@@ -128,7 +100,7 @@
   font-size: 16px;
   font-weight: bold;
   color: #909090;
-  padding-top: 3px;
+  padding-top: 23px;
   padding-bottom: 3px;
 }
 
