--- a/assets/css/registerstyle.css
+++ b/assets/css/registerstyle.css
@@ -26,9 +26,9 @@
 
 .register__content h1 {
   margin-top: 15px;
-  margin-bottom: 8px;
+  margin-bottom: 5px;
   color: #1E8449;
-  font-size: 40px;
+  font-size: 33px;
   text-align: center;
   text-shadow: 0 5px #202020;
 }
@@ -77,13 +77,17 @@
 .register__failmessage {
   text-align: center;
   color: #D35400;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: bold;
+  padding-bottom: 6px;
 }
 
 @media screen and (max-width: 500px) {
   .register__window {
     width: 370px;
+  }
+  .register__button {
+    padding-top: 6px;
   }
   .register__button button {
     width: 300px;
@@ -93,6 +97,11 @@
   }
   .register__content h1 {
     font-size: 35px;
+  }
+  .register__failmessage {
+    font-size: 13px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
