--- a/assets/css/formstyle.css
+++ b/assets/css/formstyle.css
@@ -4,7 +4,7 @@
 }
 
 .chatbox {
-	background-color: #379683;
+	background-color: #964000;
 	box-shadow: 0 4px #202020;
 	width: 700px;
 	height: 720px;
@@ -12,10 +12,12 @@
 	margin: 0 auto;
 	margin-top: 110px;
   border-radius: 5px;
+	outline: 2px dashed #632a00;
+  outline-offset: -5px;
 }
 
 .chatlogs {
-	background-color: #edf5e1;
+	background-color: #fff5ed;
 	padding-left: 7px;
 	margin-left: 30px;
 	padding-top: 10px;
@@ -46,19 +48,29 @@
 	width: 60%;
 	padding: 10px 15px 10px 15px;
 	margin: 5px 10px 0;
-	border-radius: 5px;
+	border-radius: 20px;
 	font-size: 18px;
 }
 
 .friend .chat-message {
-	background-color: #5cdb95;
-	color: #000;
+	background-color: #ffdecc;
+	color: #484848;
 }
 
 .self .chat-message {
-	background-color: #3b8beb;
+	background-color: #964000;
 	color: #fff;
 	margin-left: 230px;
+}
+
+.selfchatname {
+	color: #020100;
+	font-weight: bold;
+}
+
+.friendchatname {
+	color: #802000;
+	font-weight: bold;
 }
 
 .chat-form {
@@ -68,7 +80,7 @@
 }
 
 .chat-form textarea {
-	background-color: #fff;
+	background-color: #F0F0F0;
 	color: #000;
 	width: 88%;
 	height: 45px;
@@ -80,8 +92,8 @@
 }
 
 .chat-form button {
-	background-color: #2874A6;
-	color: #f5f5f5;
+	background-color: #F0F0F0;
+	color: #964000;
   height: 45px;
   padding: 0 15px 0 15px;
 	font-size: 25px;
@@ -94,7 +106,7 @@
 }
 
 .chat-form button:hover {
-	background-color: #2982bc;
+	color: #632a00;
 }
 
 .errorIndex {
@@ -102,20 +114,9 @@
 	text-align: center;
 }
 
-.selfchatname {
-	color: #000099;
-	font-weight: bold;
-}
-
-.friendchatname {
-	color: #802000;
-	font-weight: bold;
-}
-
 .space {
 	padding-left: 3px;
 }
-
 
 @media screen and (max-height: 900px) {
 	.chatbox {
